--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "ion-multi-picker": "^2.1.2",
+    "ion2-calendar": "^2.1.6-beta.2",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
+    "moment": "^2.21.0",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.18"
